--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "1fd61c80-7e4f-4127-96a4-58f2c3b3733d"
 authors = ["Arnold"]
 version = "0.1.0"
 
+[deps]
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+
 [compat]
 julia = "1.6"
 
