--- a/Project.toml
+++ b/Project.toml
@@ -8,9 +8,9 @@ CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 
 [compat]
-CUDA = "3.3.0"
-Flux = "0.12.4"
-julia = "1.6.0"
+CUDA = "3.3.0, 3"
+Flux = "0.12.4, 0.13"
+julia = "1.6.0, 1.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
